--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@
     padding: 0;
     margin: 0;
 }
+
+body{
+    background-color: lightgrey;
+}
+
+/* CSS Logo e testo */
+header{
+    height: 80px;
+    background-color: white;
+    padding: 13px 20px;
+}
+
+.middle{
+    vertical-align: middle;
+}
+
+.logo-text{
+    height: 100px;
+    font-size: 35px;
+    font-family: "Roboro", Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    vertical-align: middle;
+}
+/* /CSS Logo e testo */
