--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: "Roboro", Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -22,8 +23,39 @@ header{
 .logo-text{
     height: 100px;
     font-size: 35px;
-    font-family: "Roboro", Arial, Helvetica, sans-serif;
+    
     font-weight: 600;
     vertical-align: middle;
 }
 /* /CSS Logo e testo */
+
+/* CSS Menu */
+nav{
+    height: 50px;
+    background-color: white;
+    margin: 50px 100px 1px 100px;
+    border-radius: 10px 10px 0 0;
+    vertical-align: middle;
+    line-height: 50px;
+}
+
+.link{
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 10px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#add-task{
+    margin-left: 40px;
+    background-color: deepskyblue;
+    color: white;
+}
+
+#add-section{
+    border: 1px solid grey;
+    color: grey;    
+}
+
+/* /CSS Menu */
