--- a/style.css
+++ b/style.css
@@ -127,4 +127,12 @@ section{
 .mobile{
     background-color: orange;
 }
+
+.website{
+    background-color: palevioletred;
+}
+
+.sales{
+    background-color: lightgreen;
+}
 /* /Main */
